<resources>
    <string name="app_name">ResturantTheBest</string>
    <string name="resturant_app">Resturant App</string>
    <string name="kwd">KWD</string>
    <string name="login">LOGIN</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="add_varation">Add Varation</string>
    <string name="name_arabic">Name Arabic</string>
    <string name="name_en">Name En</string>
    <string name="add">Add</string>
    <string name="via_gallery">Via Gallery</string>
    <string name="via_camera">Via Camera</string>
    <string name="cancel">Cancel</string>
    <string name="market_profile_page">Market Profile page</string>
    <string name="orders">Orders</string>
    <string name="categories_amp_products"><![CDATA[Categories & Products]]></string>
    <string name="reports">Reports</string>
    <string name="share_amp_win"><![CDATA[Share & Win]]></string>
    <string name="how_to_use">How to use ?</string>
    <string name="rate_application">Rate application</string>
    <string name="notes">Notes</string>
    <string name="about_us">About us</string>
    <string name="edit_category">Edit Category</string>
    <string name="name">name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="add_product">Add Product</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="minimum_order">Minimum Order</string>
    <string name="working_hours">Working Hours</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="frieday">Frieday</string>
    <string name="accept">Accept Order</string>
    <string name="decline">Refuse Order</string>
    <string name="driver_now">Need Driver Now</string>
    <string name="driver15">Need Driver After 15 minutes</string>
    <string name="schedule">Schedule Driver Time</string>
    <string name="register">Register</string>
    <string name="shop_info">Shop Info</string>
    <string name="market_name">market name</string>
    <string name="market_name_arabic">market name arabic</string>
    <string name="address">Address</string>
    <string name="address_arabic">Address Arabic</string>
    <string name="owner_name">Owner name</string>
    <string name="website">Website</string>
    <string name="restaurant">restaurant</string>
    <string name="markets">Markets</string>
    <string name="shabra">Shabra</string>
    <string name="shop_details">Shop Details</string>
    <string name="delivery_price">Delivery Price</string>
    <string name="order_limit">Order Limit</string>
    <string name="phone_number">phone number</string>
    <string name="count_orders">Orders Count</string>
    <string name="total_money">Total Money</string>
    <string name="decline_apps">Canceled Orders</string>
    <string name="completed">Completed Orders</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="login_data">Login Data</string>
    <string name="email">Email</string>
    <string name="manager_info">Manager Info</string>
    <string name="manager_name">Manager name</string>
    <string name="manager_position">Manager position</string>
    <string name="manager_mobile_number">Manager Mobile Number</string>
    <string name="company_papers">Company Papers</string>
    <string name="license_number">License Number</string>
    <string name="id_number">ID Number</string>
    <string name="default_notification_channel_id">1</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="title_read_me">Read Me Firstly</string>
    <string name="desc_read_me">After completing the customer’s journey, the customer must be called to go to him to confirm the trip. The trip cannot be canceled except in the case of going to the customer and waiting for the customer 02 for your buckets. In the event that the trip is canceled after reaching the customer and waiting for ten bucks, the company will pay half a dinar as a reward for the customer. It is not possible to take a customer\'s phone and communicate with the customer without using the app, and this is considered dishonorable to the trust.</string>
    <string name="check_read_me">I agree to the terms, regulations and laws</string>
    <string name="send_request_to_register">Send Request to Register</string>
    <string name="quantity">Quantity:</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="desc_terms">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="terms_of_the_service">Terms of the service</string>
    <string name="conditions_and_rules">Conditions and rules</string>
    <string name="conditions_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="will_be_pleased_you_share_our_application_on">Will be pleased you share our application on</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instgram">Instgram</string>
    <string name="mailbox">Mailbox</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="call_us">Call us</string>
    <string name="change_language">Change Language</string>
</resources>