<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30sp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginEnd="20sp"
            android:id="@+id/back"
            android:src="@drawable/back"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/terms_amp_conditions"
            android:layout_width="wrap_content"
            android:textColor="@color/blackcolor"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
<ImageView
    android:layout_width="match_parent"
    android:layout_marginBottom="20sp"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:src="@drawable/logo_resturant"
    android:layout_height="match_parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/blackcolor"
        android:text="@string/terms_of_the_service"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="7sp"
        android:textColor="@color/blackcolor"
        android:text="@string/desc_terms"
        android:layout_marginBottom="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/blackcolor"
        android:text="@string/conditions_and_rules"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="7sp"
        android:textColor="@color/blackcolor"
        android:text="@string/conditions_desc"
        android:layout_height="wrap_content"/>
</LinearLayout>
