<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10sp"
    android:layout_width="match_parent"
    android:layout_margin="20sp"
    android:layout_marginBottom="5sp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10sp"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:maxLines="2"
            android:gravity="center"
            android:id="@+id/name"
            android:textColor="@color/blackcolor"
            android:hint="@string/name_arabic"
            android:layout_marginTop="10sp"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:maxLines="2"
            android:gravity="center"
            android:id="@+id/namear"
            android:textColor="@color/blackcolor"
            android:hint="@string/name_en"
            android:layout_marginTop="5sp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="200sp"
            android:text="@string/edit_category"
            android:layout_marginTop="20sp"
            android:id="@+id/btn_click"
            android:textColor="@color/whitecolor"
            android:background="@drawable/background_primary"
            android:layout_gravity="center"
            android:layout_height="44sp"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>
