<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:id="@+id/viewEmpty"
        android:alpha="0.5"
        android:background="@color/blackcolor"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/whitecolor"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20sp"
        android:background="@drawable/drawer_top"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_height="200sp">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/back"
            android:id="@+id/back"
            android:tint="@color/whitecolor"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/edit"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="85sp"
                android:layout_centerInParent="true"
                android:src="@drawable/user"
                android:padding="20sp"
                android:id="@+id/profileimage"
                android:background="@drawable/drawer_profile_bg"
                android:layout_height="90sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginEnd="10sp"
                android:src="@drawable/drawer_dashes"
                android:layout_toStartOf="@id/profileimage"
                android:tint="@color/whitecolor"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_toEndOf="@id/profileimage"
                android:layout_height="match_parent">
                <Switch
                    android:checked="true"
                    android:id="@+id/aSwitch"
                    android:thumbTint="@color/whitecolor"
                    android:trackTint="@color/whitecolor"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="متاح"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:padding="20sp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:background="@null"
                android:padding="10sp"
                android:drawableTint="@color/blackcolor"
                android:gravity="start|center"
                android:text="@string/market_profile_page"
                android:id="@+id/profile"
                android:drawablePadding="12sp"
                android:drawableStart="@drawable/home_active_icon"
                android:textColor="@color/blackcolor"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:background="@null"
                android:padding="10sp"
                android:id="@+id/lastorders"
                android:drawableTint="@color/blackcolor"
                android:gravity="start|center"
                android:text="@string/orders"
                android:drawablePadding="12sp"
                android:drawableStart="@drawable/history"
                android:textColor="@color/blackcolor"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:background="@null"
                android:padding="10sp"
                android:drawableTint="@color/gray_chat"
                android:gravity="start|center"
                android:text="@string/categories_amp_products"
                android:drawablePadding="12sp"
                android:id="@+id/main"
                android:drawableStart="@drawable/categories"
                android:textColor="@color/blackcolor"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/statistics"
                android:drawablePadding="12sp"
                android:drawableTint="@color/gray_chat"
                android:gravity="start|center"
                android:padding="10sp"
                android:text="@string/reports"
                android:textColor="@color/blackcolor"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:background="@null"
                android:id="@+id/share"
                android:padding="10sp"
                android:drawableTint="@color/blackcolor"
                android:gravity="start|center"
                android:text="@string/share_amp_win"
                android:drawablePadding="12sp"
                android:drawableStart="@drawable/share"
                android:textColor="@color/blackcolor"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:background="@null"
                android:padding="10sp"
                android:drawableTint="@color/blackcolor"
                android:gravity="start|center"
                android:text="@string/how_to_use"
                android:id="@+id/howuse"
                android:drawablePadding="12sp"
                android:drawableStart="@drawable/how_to_use_icon"
                android:textColor="@color/blackcolor"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:background="@null"
                android:padding="10sp"
                android:drawableTint="@color/blackcolor"
                android:gravity="start|center"
                android:text="@string/rate_application"
                android:drawablePadding="12sp"
                android:id="@+id/rate"
                android:drawableStart="@drawable/rate_us_icon"
                android:textColor="@color/blackcolor"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:background="@null"
                android:padding="10sp"
                android:drawableTint="@color/gray_drawer"
                android:gravity="start|center"
                android:text="@string/change_language"
                android:drawablePadding="12sp"
                android:id="@+id/language"

                android:drawableStart="@drawable/global"
                android:textColor="@color/blackcolor"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:background="@null"
                android:padding="10sp"
                android:drawableTint="@color/blackcolor"
                android:gravity="start|center"
                android:text="@string/notes"
                android:drawablePadding="12sp"
                android:visibility="gone"
                android:drawableStart="@drawable/notes_icon"
                android:textColor="@color/blackcolor"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:background="@null"
                android:padding="10sp"
                android:id="@+id/settings"
                android:drawableTint="@color/blackcolor"
                android:gravity="start|center"
                android:text="@string/about_us"
                android:drawablePadding="12sp"
                android:drawableStart="@drawable/about_icon"
                android:textColor="@color/blackcolor"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:backgroundTint="@color/colorPrimaryDark"
        android:background="@drawable/drawer_bottom"
        android:layout_height="40sp"/>
</LinearLayout>
</LinearLayout>