<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_splash"
    android:padding="20sp"
    android:layout_height="match_parent"
    android:gravity="center|top">
    <ImageView
        android:layout_width="200sp"
        android:src="@drawable/logo_resturant"
        android:layout_height="200sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/blackcolor"
        android:textStyle="bold"
        android:text="@string/resturant_app"
        android:layout_marginTop="-50sp"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="20sp"
        android:padding="20sp"
        app:cardBackgroundColor="@color/whitecolor"
        android:layout_margin="20sp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20sp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textSize="33sp"
                android:textStyle="bold"
                android:textColor="@color/gray_chat"
                android:layout_marginBottom="20sp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="7sp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/background_bg_color"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/profileuser"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_marginStart="10sp"
                    android:hint="@string/user_name"
                    android:id="@+id/email"
                    android:textColorHint="@color/gray_chat"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="7sp"
                android:orientation="horizontal"
                android:layout_marginTop="15sp"
                android:gravity="center"
                android:background="@drawable/background_bg_color"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/padlock"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_marginStart="10sp"
                    android:hint="@string/password"
                    android:id="@+id/password"
                    android:textColorHint="@color/gray_chat"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                android:layout_width="150sp"
                android:text="@string/login"
                android:textColor="@color/whitecolor"
                android:background="@drawable/background_primary"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:id="@+id/login"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:padding="5sp"
                android:id="@+id/signup"
                android:textStyle="bold"
                android:text="@string/sign_up"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>