<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:padding="20sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="32sp"
        android:background="@color/whitecolor"
        android:layout_height="60sp">
        <RelativeLayout
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:id="@+id/drawer"
                android:src="@drawable/navigation_icon"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logo_resturant"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_marginStart="10sp"
        android:id="@+id/text"
        android:layout_marginTop="15sp"
        android:textColor="@color/blackcolor"
        android:text="@string/will_be_pleased_you_share_our_application_on"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/facebook"
        app:cardCornerRadius="9sp"
        android:layout_marginTop="20sp"
        app:cardBackgroundColor="@color/whitecolor"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:textColor="#475A96"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingStart="20sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:drawablePadding="20sp"
            android:drawableStart="@drawable/fb_icon"
            android:text="@string/facebook"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="9sp"
        android:id="@+id/twitter"
        android:layout_marginTop="10sp"
        app:cardBackgroundColor="@color/whitecolor"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:textColor="#50ABF1"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingStart="20sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:drawablePadding="20sp"
            android:drawableStart="@drawable/tw_icon"
            android:text="@string/twitter"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="9sp"
        android:layout_marginTop="10sp"
        android:id="@+id/instgram"
        app:cardBackgroundColor="@color/whitecolor"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:textColor="#CE2D91"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingStart="20sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:drawablePadding="20sp"
            android:drawableStart="@drawable/insta_icon"
            android:text="@string/instgram"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="9sp"
        android:layout_marginTop="10sp"
        android:id="@+id/mail"
        app:cardBackgroundColor="@color/whitecolor"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:textColor="#FFE726"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingStart="20sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:drawablePadding="20sp"
            android:drawableStart="@drawable/mail_icon"
            android:text="@string/mailbox"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="9sp"
        android:layout_marginTop="10sp"
        app:cardBackgroundColor="@color/whitecolor"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:textColor="#30BF39"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/whatsapp"
            android:paddingStart="20sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:drawablePadding="20sp"
            android:drawableStart="@drawable/wa_icon"
            android:text="@string/whatsapp"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="9sp"
        android:layout_marginTop="10sp"
        android:id="@+id/call"
        app:cardBackgroundColor="@color/whitecolor"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/blackcolor"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingStart="20sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:drawablePadding="20sp"
            android:drawableStart="@drawable/call_share"
            android:text="@string/call_us"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>